2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-06  Andras Varga

	* cmdenv.h: added isGUI()

2003-12-11  Andras Varga

	* all files: follow changes in sim/; C-style casts replaced with 
	static_cast<>

2003-11-13  Andras Varga

	* Checked in parallel simulation code that was developed March-May 2003,
	during my stay at Monash University. Changes:

	2003-04-18  Andras Varga
	* new ini file option:
	  output-file=<filename>
	If present, output will be redirected to the given file. If the
	[General]/fname-append-host setting is turned on, the the host
	name and pid (process id) will be appended to the file name.
	Particularly useful when a parallel simulation is run from a shared
	directory.

2003-10-02  Andras Varga

	* cmdenv.cc/h: added new method cEnvir::moduleMethodCalled()

2003-09-22  Andras Varga

	* cmdenv.cc/h: messageSent() signature change, see include/ChangeLog

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-01-07  Andras Varga

	* new ini file options:
	  autoflush=yes/no (default: no)
	    call fflush(stdout) after each event banner or status update;
	    affects both express and normal mode.
	  message-trace=yes/no (default: no)
	    log message sending (by send(),scheduleAt(), etc) and delivery
	    on standard output; effective only in normal mode

	* format of event banner slightly changed

2002-11-03  Andras Varga

	* cmdenv.cc: improved status display

2002-10-20  Andras Varga

	* cmdenv.cc: revised omnetpp.ini entries understood by Cmdenv.
	A new entry was introduced to make it easier to switch between
	typical uses of Cmdenv.
	  express-mode=yes/no (default: no)
	Normal (non-express) mode is for debugging: detailed information
	will be written	to the standard output (event banners, module output,
	etc). Express mode can be used for long simulation runs: only
	periodical status update is displayed about the progress of the